src/test/resources/purescript_examples/failing/OperatorSections.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith TypesDoNotUnify\n')
  PSASTWrapperElement(Program)
    PSASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSASTWrapperElement(ModuleName)
        PSASTWrapperElement(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(ImportModuleName)
          PSASTWrapperElement(Qualified)
            PsiElement(proper name)('Prelude')
          PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('main')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(Value)
          PSASTWrapperElement(PrefixValue)
            PsiElement(do)('do')
            PsiElement(whitespace)('\n  ')
            PSASTWrapperElement(DoNotationValue)
              PSASTWrapperElement(Value)
                PSASTWrapperElement(PrefixValue)
                  PSASTWrapperElement(Parens)
                    PsiElement(()('(')
                    PSASTWrapperElement(Value)
                      PSASTWrapperElement(PrefixValue)
                        PSASTWrapperElement(BooleanLiteral)
                          PsiElement(true)('true')
                          PsiElement(whitespace)(' ')
                        PsiElement(`)('`')
                        PsiElement(identifier)('not')
                        PsiElement(`)('`')
                        PsiElement(whitespace)(' ')
                        PSASTWrapperElement(Var)
                          PSASTWrapperElement(Qualified)
                            PsiElement(identifier)('_')
                    PsiElement())(')')
                    PsiElement(whitespace)('\n')
